# StyleMixer-Cloud-based-Neural-Style-Transfer-Service

./: Cargo.toml  Dockerfile  Makefile  README.md  main.py
assets/: README.md
src/: handlers.rs  index.html  main.rs
static/: index.html
templates/: index.html
