[package]
name = "image_style_transfer"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0-beta.8"
actix-multipart = "0.6.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "tokio-native-tls"] }
futures = "0.3"
base64 = "0.13.0"
image = "0.23.13"