[package]
name = "rust-actix-image-style"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.0.0"
actix-multipart = "0.4"
actix-files = "0.6"
actix-rt = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.4", features = ["blocking", "json", "multipart"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.8"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }
thiserror = "1.0"